# chexprompt

./: .gitignore  README.md  pixi.toml  pyproject.toml
src/chexprompt/: evaluator.py  rate_reports.py
tests/: test_evaluator.py
