[project]
authors = [{name = "Katherine Rosenfeld", email = "56368533+krosenfeld-IDM@users.noreply.github.com"}]
dependencies = []
name = "chexprompt"
requires-python = ">= 3.11,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
chexprompt = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
openai = ">=1.66.3,<2"
aiolimiter = "==1.1.0"
aiohttp = ">=3.11.13,<4"
